syntax = "proto3";

package social.v1;

import "buf/validate/validate.proto";

option go_package = "userv1";

message User {
  string name = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.max_len = 50
  ];
}

message GetUserRequest {
  User user = 1;
}

message GetUserResponse {
  User user = 1;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
